# find-se-papers

./: .env.example  .gitignore  Makefile  QUICKSTART.md  README.md  add_swepapers.py  arxiv_daemon.py  compute.py  pyproject.toml  requirements.txt  serve.py
static/: paper_detail.js  paper_list.js
templates/: about.html  base.html  index.html  profile.html
