[tool.poetry]
name = "arxiv-sanity-lite-se"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "arxiv_sanity_lite_se"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
